upd: create app

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,34 @@
 // app global css in SCSS form
+body{
+  font-family: Montserrat, sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color:white;
+}
+
+.layout-width{
+  width:100%;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.q-table__card {
+  border-radius: 8px;
+  box-shadow: 0 16px 24px rgba(103, 110, 134, 0.1);
+}
+
+.q-table__grid-item-card {
+  padding: 16px;
+}
+
+.q-card{
+  border-radius: 16px;
+  box-shadow: 0 16px 24px rgba(103, 110, 134, 0.1);
+}
+
+.q-drawer--left.q-drawer--bordered {
+  border-right: none;
+}
